force-app/main/default/objects/Survey_Result__c/Survey_Result__c.object-meta.xml
<CustomObject>
    <label>Survey Result</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Survey Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>