force-app/main/default/objects/Survey_Result__c/fields/Feedback_Case__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Results (Feedback Case)</relationshipLabel>
    <relationshipName>Feedback_Case</relationshipName>
    <type>Lookup</type>
</CustomField>