force-app/main/default/objects/Survey_Result__c/fields/NS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Results</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>