force-app/main/default/objects/Survey_Result__c/fields/NS_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Record_Type__c</fullName>
    <formula>NS_Account_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>