force-app/main/default/objects/Survey_Result__c/fields/NS_Effort_Feeedback_Formula__c.field-meta.xml
<CustomField>
    <fullName>NS_Effort_Feeedback_Formula__c</fullName>
    <description>This field converts the Effort Feedback values to Positive, Negative or Neutral</description>
    <formula>CASE( TEXT( NS_resolve__c ),
&quot;Strongly Disagree&quot;,&quot;Negative&quot;,
&quot;Somewhat Disagree&quot;,&quot;Negative&quot;,
&quot;Somewhat Agree&quot;,&quot;Positive&quot;,
&quot;Strongly Agree&quot;,&quot;Positive&quot;,
&quot;N/A&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effort Feeedback Formula</label>
    <type>Text</type>
</CustomField>