force-app/main/default/objects/Survey_Result__c/fields/NS_issue__c.field-meta.xml
<CustomField>
    <fullName>NS_issue__c</fullName>
    <label>Have we resolved your issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>