force-app/main/default/objects/Survey_Result__c/fields/NS_Parent_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Case_Owner__c</fullName>
    <formula>NS_ParentCaseNumber__r.Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Owner</label>
    <type>Text</type>
</CustomField>