force-app/main/default/objects/Survey_Result__c/fields/NS_Parent_Interaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Interaction_Reason__c</fullName>
    <formula>TEXT( NS_ParentCaseNumber__r.NS_InteractionReason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Interaction Reason</label>
    <type>Text</type>
</CustomField>