force-app/main/default/objects/Survey_Result__c/fields/NS_Parent_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Interaction_Type__c</fullName>
    <formula>TEXT( NS_ParentCaseNumber__r.NS_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Interaction Type</label>
    <type>Text</type>
</CustomField>