force-app/main/default/objects/Survey_Result__c/fields/NS_Parent_Specialist_at_Time_of_Close__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Specialist_at_Time_of_Close__c</fullName>
    <formula>NS_ParentCaseNumber__r.NS_User_At_Time_of_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Specialist at Time of Close</label>
    <type>Text</type>
</CustomField>