force-app/main/default/objects/Survey_Result__c/fields/NS_ParentCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>NS_ParentCaseNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Results</relationshipLabel>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>