force-app/main/default/objects/Survey_Result__c/fields/NS_Please_tell_us_why_IM_Specialist__c.field-meta.xml
<CustomField>
    <fullName>NS_Please_tell_us_why_IM_Specialist__c</fullName>
    <label>IM Please tell us why (Specialist Fdbck)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>