force-app/main/default/objects/Survey_Result__c/fields/NS_Please_tell_us_why_Specialist_Feedbk__c.field-meta.xml
<CustomField>
    <fullName>NS_Please_tell_us_why_Specialist_Feedbk__c</fullName>
    <label>CS Please tell us why (Specialist Fdbck)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>