force-app/main/default/objects/Survey_Result__c/fields/NS_ResolutionEase__c.field-meta.xml
<CustomField>
    <fullName>NS_ResolutionEase__c</fullName>
    <label>Please tell us why (Resolution Ease)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>