force-app/main/default/objects/Survey_Result__c/fields/NS_resolve__c.field-meta.xml
<CustomField>
    <fullName>NS_resolve__c</fullName>
    <label>NS made it easy for me to resolve issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>