force-app/main/default/objects/Survey_Result__c/fields/NS_resolveIssue__c.field-meta.xml
<CustomField>
    <fullName>NS_resolveIssue__c</fullName>
    <label>Please tell us why so we can follow-up</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>