force-app/main/default/objects/Survey_Result__c/fields/NS_Self_Service_Feedback_Formula__c.field-meta.xml
<CustomField>
    <fullName>NS_Self_Service_Feedback_Formula__c</fullName>
    <description>This field converts Self-Service feedback values to Positive, Negative or Neutral</description>
    <formula>CASE( TEXT( NS_Self_Service_Tools_are_easy_to_use__c ),
&quot;Strongly Disagree&quot;,&quot;Negative&quot;,
&quot;Somewhat Disagree&quot;,&quot;Negative&quot;,
&quot;Somewhat Agree&quot;,&quot;Positive&quot;,
&quot;Strongly Agree&quot;,&quot;Positive&quot;,
&quot;N/A&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self-Service Feedback Formula</label>
    <type>Text</type>
</CustomField>