force-app/main/default/objects/Survey_Result__c/fields/NS_Self_Service_Tools_are_easy_to_use__c.field-meta.xml
<CustomField>
    <fullName>NS_Self_Service_Tools_are_easy_to_use__c</fullName>
    <label>NS Self-Service Tools are easy to use.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>