force-app/main/default/objects/Survey_Result__c/fields/NS_Specialist_Feedback_Formula__c.field-meta.xml
<CustomField>
    <fullName>NS_Specialist_Feedback_Formula__c</fullName>
    <description>This field converts the &quot;specialist&quot; feedback values to positive, negative or neutral</description>
    <formula>CASE( TEXT( NS_Specialist_met_my_expectations__c ),
&quot;Strongly Agree&quot;,&quot;Positive&quot;,
&quot;Somewhat Agree&quot;,&quot;Positive&quot;,
&quot;Somewhat Disagree&quot;,&quot;Negative&quot;,
&quot;Strongly Disagree&quot;,&quot;Negative&quot;,
&quot;N/A&quot;
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialist Feedback Formula</label>
    <type>Text</type>
</CustomField>