force-app/main/default/objects/Survey_Result__c/fields/NS_SurveyStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_SurveyStatus__c</fullName>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>