force-app/main/default/objects/Survey_Result__c/fields/NS_SurveySubmitted__c.field-meta.xml
<CustomField>
    <fullName>NS_SurveySubmitted__c</fullName>
    <label>Survey Submitted Time</label>
    <type>DateTime</type>
</CustomField>