force-app/main/default/objects/Survey_Result__c/listViews/NS_Customer_Service_Survey_Results.listView-meta.xml
<ListView>
    <fullName>NS_Customer_Service_Survey_Results</fullName>
    <columns>NAME</columns>
    <columns>NS_Account_Name__c</columns>
    <columns>NS_Contact_Name__c</columns>
    <columns>Feedback_Case__c</columns>
    <columns>NS_issue__c</columns>
    <columns>NS_SurveyStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NS_Parent_Specialist_at_Time_of_Close__c</columns>
    <columns>NS_ParentCaseNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NS_Parent_Case_Owner__c</field>
        <operation>notContain</operation>
        <value>Intermodal</value>
    </filters>
    <label>Customer Service Survey Results</label>
</ListView>