force-app/main/default/objects/Survey_Result__c/listViews/NS_Intermodal_Survey_Results.listView-meta.xml
<ListView>
    <fullName>NS_Intermodal_Survey_Results</fullName>
    <columns>NAME</columns>
    <columns>NS_Account_Name__c</columns>
    <columns>NS_Contact_Name__c</columns>
    <columns>Feedback_Case__c</columns>
    <columns>NS_issue__c</columns>
    <columns>NS_SurveyStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NS_Parent_Case_Owner__c</field>
        <operation>contains</operation>
        <value>Intermodal</value>
    </filters>
    <label>Intermodal Survey Results</label>
</ListView>